--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,58 +1,147 @@
-@media(max-width:800px){
-    .container{
+@media(max-width:1370px) {
+    .container {
         display: flex;
         flex-direction: column;
-        background: url(../image/bg-mobile.png) no-repeat;
     }
-    .column-1 .logo{
-            display: flex;
-            justify-content: center;
-            padding:10px 50px 50px 50px;
+    .column-1{
+        margin: 30px;       
     }
+
+    .column-1 .logo {
+        display: flex;
+        justify-content: flex-start;        
+    }
+
     .column-1 .div-img {
         display: flex;
         justify-content: center;
         flex-shrink: 1;
     }
-.column-1 .div-img .illustration-mockups{
-    max-width: 370px;
-    min-width: 300px
+
+    .column-1 .div-img .illustration-mockups {
+        min-width: 300px;
     }
-    .column-2 .about{
-     text-align: center;
-     padding: 10px 20px;
+
+    .column-2 .about {
+        text-align: center;
+        padding: 10px 20px;
     }
-   .column-2 h1{
-    justify-content: center;
-    padding: 0;
-    font-size: 1.6rem;
-    line-height: 2.1rem;
+
+    .column-2 h1 {
+        justify-content: center;
+        padding: 0;
+        font-size: 1.6rem;
+        line-height: 2.1rem;
     }
-   .column-2 p{
-    font-size: 1.3rem;
-   }
-   .column-2 .button{
-    justify-content: center;
-   }
-   .column-2 .button a{
-    padding: 10px 80px;
-   }
-   .social {
-    display: flex;
-    justify-content: center;
-    margin: 30px 0;
-   }
-   .social nav a{
-    font-size: 0.9rem;
-    border: 1px solid var(--default-color-font);
-    padding: 9px 12px;
-   }
-   .social nav a:first-child{
-    padding: 9px 13px;
-   }
+
+    .column-2 p {
+        font-size: 1.3rem;
+        padding: 30px 100px;
+    }
+
+    .column-2 .button {
+        justify-content: center;
+    }
+
+    .column-2 .button a {
+        padding: 10px 80px;
+        box-shadow: 5px 5px 15px #35255a;
+    }
+
+    .social {
+        display: flex;
+        justify-content: center;
+        margin: 30px 0;
+    }
+
+    .social nav a {
+        font-size: 0.9rem;
+        border: 1px solid var(--default-color-font);
+        padding: 9px 12px;
+    }
+
+    .social nav a:first-child {
+        padding: 9px 13px;
+    }
 }
-@media(max-width:1030px){
-    .social{
-        margin-top: 50px;
+
+@media(max-width:800px) {
+    body {
+        background: url(../image/bg-mobile.png) no-repeat;
+        background-attachment: fixed;
+        background-size:contain;
+        background-color: var(--violet);
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .column-1 .logo {
+        display: flex;
+        justify-content: flex-start;      
+    }
+
+    .column-1 .logo-img {
+        width: 160px;
+    }
+
+    .column-1 .div-img {
+        display: flex;
+        justify-content: center;
+        flex-shrink: 1;
+    }
+
+    .column-1 .div-img .illustration-mockups {
+        max-width: 370px;
+        min-width: 300px
+    }
+
+    .column-2{
+        padding-top: 30px;
+    }
+    .column-2 .about {
+        text-align: center;
+        padding: 10px 20px;
+    }
+
+    .column-2 h1 {
+        justify-content: center;
+        padding: 0;
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+    }
+
+    .column-2 p {
+        padding: 30px 0;
+        justify-content: center;
+        font-size: 1.3rem;
+    }
+
+    .column-2 .button {
+        justify-content: center;
+    }
+
+    .column-2 .button a {
+        padding: 10px 80px;
+        box-shadow: 5px 5px 15px #35255a;        
+    }
+
+    .social {
+        display: flex;
+        justify-content: center;
+        margin: 50px 0;
+    }
+
+    .social nav a {
+        font-size: 0.9rem;
+        border: 1px solid var(--default-color-font);
+        padding: 9px 12px;
+        
+    }
+
+    .social nav a:first-child {
+        padding: 9px 13px;
     }
 }
